objects/Stand_Alone_Selling_Price__c.object
<CustomObject>
    <fields>
        <fullName>Base_SSP__c</fullName>
        <label>Base SSP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>High_Value_Threshold__c</fullName>
        <label>High Value Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Low_Value_Threshold__c</fullName>
        <label>Low Value Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Standalone Selling Prices</relationshipLabel>
        <relationshipName>Standalone_Selling_Prices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SSP_High_Value__c</fullName>
        <formula>IF ( SSP_Tolerance_Checking_Policy__c , (Base_SSP__c + ( Base_SSP__c * High_Value_Threshold__c )) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSP High Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSP_Low_Value__c</fullName>
        <formula>IF ( SSP_Tolerance_Checking_Policy__c , (Base_SSP__c - ( Base_SSP__c * Low_Value_Threshold__c )) , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSP Low Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSP_Tolerance_Checking_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SSP Tolerance Checking Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SSP_Tolerance_Policy_Options__c</fullName>
        <label>SSP Tolerance Policy Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Boundary</fullName>
                </value>
                <value>
                    <fullName>Standalone Selling Price</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Standalone Selling Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Base_SSP__c</columns>
        <columns>Low_Value_Threshold__c</columns>
        <columns>SSP_Low_Value__c</columns>
        <columns>High_Value_Threshold__c</columns>
        <columns>SSP_High_Value__c</columns>
        <columns>SSP_Tolerance_Checking_Policy__c</columns>
        <columns>SSP_Tolerance_Policy_Options__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SSPs</fullName>
        <booleanFilter>1 or 2 or 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Base_SSP__c</columns>
        <columns>Low_Value_Threshold__c</columns>
        <columns>SSP_Low_Value__c</columns>
        <columns>High_Value_Threshold__c</columns>
        <columns>SSP_High_Value__c</columns>
        <columns>SSP_Tolerance_Checking_Policy__c</columns>
        <columns>SSP_Tolerance_Policy_Options__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>Core</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>Quick Start</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>Logger</value>
        </filters>
        <label>SSPs</label>
    </listViews>
    <nameField>
        <displayFormat>SSP-{0000000}</displayFormat>
        <label>Stand Alone Selling Price Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Standalone Selling Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>